# metaXrl

./: .env  .gitignore  Dockerfile  README.md  baseline_results.json  inference.py  openenv.yaml  package-lock.json  pyproject.toml  requirements.txt  server.py  validate.sh
mnt/user-data/outputs/soc-openenv/scenarios/: __init__.py
scenarios/: hard_scenarios.py
server/: app.py
soc-openenv/: README.md  inference.py  pyproject.toml  requirements.txt  server.py
soc-openenv/mnt/user-data/outputs/soc-openenv/scenarios/: __init__.py
soc-openenv/scenarios/: __init__.py  easy_scenarios.py  medium_scenarios.py
soc-openenv/soc_env/: __init__.py
soc-openenv/soc_openenv.egg-info/: PKG-INFO  top_level.txt
soc-openenv/tests/: test_environment.py  test_graders.py
soc-openenv/web/: package-lock.json  package.json  tsconfig.tsbuildinfo
soc-openenv/web/src/components/: AboutPage.tsx  HomePage.tsx
soc_env/: environment.py  graders.py  models.py
soc_openenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_graders.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  styles.css
web/src/components/: AboutPage.tsx  HomePage.tsx
