[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-openenv"
version = "1.0.0"
description = "SOC Incident Response OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "openai>=1.40",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["soc_env*", "scenarios*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
